--- a/res/layout/tasks_list_item.xml
+++ b/res/layout/tasks_list_item.xml
@@ -10,14 +10,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textColor="@color/Black"
             android:layout_weight="1"
             android:ellipsize="end"
             android:paddingTop="6dp"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
             android:paddingBottom="6dp"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceSmall"/>
+            android:singleLine="true"/>
 
 </LinearLayout>
