--- a/res/layout/task_list_item.xml
+++ b/res/layout/task_list_item.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout android:orientation="vertical"
                   android:layout_width="0dp"
-                  android:layout_height="match_parent"
+                  android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:paddingTop="5dp"
                   android:paddingLeft="4dp"
@@ -37,7 +37,6 @@
         android:id="@+id/taskChildren"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="0dp"
         android:contentDescription="@string/emptyText"
         android:background="@android:color/transparent"
         android:visibility="gone"
