--- a/res/layout/incident_list_item.xml
+++ b/res/layout/incident_list_item.xml
@@ -18,6 +18,7 @@
         android:id="@+id/incidentperiod"
         android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:visibility="gone"
 	    android:textColor="@color/Black"
         android:textSize="12sp" />
 	
